Fixed requestBody on delete user endpoint
